# miscal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: record-format.md
examples/: README.md  make_sample.py  sample_run.jsonl  sample_run_v2.jsonl
scripts/: smoke.sh
src/miscal/: __init__.py  __main__.py  binning.py  cli.py  errors.py  metrics.py  records.py  report.py  svg.py  temperature.py  verbal.py
tests/: conftest.py  test_binning.py  test_cli.py  test_metrics.py  test_readme_example.py  test_records.py  test_report.py  test_svg.py  test_temperature.py  test_verbal.py
